# rektangles

./: .gitignore  CMakeLists.txt  README.md  org.kde.rektangles.desktop  org.kde.rektangles.json  org.kde.rektangles.metainfo.xml
icons/: CMakeLists.txt
src/: CMakeLists.txt  cellgroup.cpp  cellgroup.h  main.cpp  puzzlehandler.cpp  puzzlehandler.h  resources.qrc
src/contents/ui/: GameTable.qml  PuzzleCell.qml  PuzzleGroup.qml  main.qml
